--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@
 /yarn-error.log
 schema.graphql
 
-# Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/credentials/production.key
 
 /public/packs
 /public/packs-test
