--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "babel-loader": "^8.1.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
